# grocery-buddy

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/agents/: eval-writer.md  money-path-security-reviewer.md  selector-fixer.md  temporal-sandbox-reviewer.md
.claude/hooks/: README.md  pytest_on_stop.py  secret_scan.py  system_reference_reminder.py
.github/workflows/: ci.yml  (+1 more)
docs/: ARCHITECTURE.md  DATABASE.md  EVALS.md  FEATURES_AND_ROADMAP.md  HOSTING.md  OPERATIONS.md  PROCUREMENT_CONVERGENCE.md  SETUP.md  SYSTEM_REFERENCE.md
evals/: __init__.py  judges.py  run.py
infra/: README.md  temporal-dynamicconfig.yaml
migrations/: 001_initial.sql  002_schedules_unique_user.sql  003_preferred_brand.sql  004_conversation_state.sql  005_checkout_ready_status.sql  006_normalize_product_names.sql  007_actual_vs_estimated_and_imports.sql  008_amazon_auth_challenges.sql  009_pending_replenishments.sql  010_prediction_snapshots.sql  011_llm_usage.sql
scripts/: debug_order_scrape.py  dev.sh  install-git-hooks.sh  seed_user.py  setup_amazon_session.py
tests/: conftest.py  test_checkout_staging.py  test_conversation_truncation.py  test_imports.py  test_intent_mapping.py  test_llm.py  test_network.py  test_notifications.py  test_order_scrape.py  test_order_synthesis.py  test_prediction_metrics.py  test_predictor.py  test_pricing.py  test_render_proposal.py  test_replenishment.py  test_resilience.py  test_runlist.py
(+51 files in other folders)
